--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit
-numpy
-matplotlib
-sympy
-pandas
-
+numpy>=1.24.0
+matplotlib>=3.7.0
+sympy>=1.12
+scipy>=1.10.0
+pandas>=2.0.0
+pillow
+typing-extensions
