--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
+*.py[codz]
 *$py.class
 
 # C extensions
@@ -27,8 +27,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -46,7 +44,7 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
+*.py.cover
 .hypothesis/
 .pytest_cache/
 cover/
@@ -55,59 +53,28 @@ cover/
 *.mo
 *.pot
 
-# Django stuff:
+# Django/Flask/Scrapy/Etc (Standard Python)
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-
-# Flask stuff:
 instance/
 .webassets-cache
-
-# Scrapy stuff:
 .scrapy
-
-# Sphinx documentation
 docs/_build/
-
-# PyBuilder
+.pybuilder/
 target/
-
-# Jupyter Notebook
 .ipynb_checkpoints
-
-# IPython
 profile_default/
 ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary dependencies to ensure reproducible builds.
-#poetry.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
-
-# Celery stuff
 celerybeat-schedule
 celerybeat.pid
-
-# SageMath parsed files
 *.sage.py
 
 # Environments
 .env
+.envrc
 .venv
 env/
 venv/
@@ -115,45 +82,49 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# IDEs
 .spyderproject
 .spyproject
-
-# Rope project settings
 .ropeproject
-
-# mkdocs documentation
 /site
-
-# mypy
 .mypy_cache/
 .dmypy.json
 dmypy.json
-
-# Pyre type checker
 .pyre/
-
-# pytype static type checker
 .pytype/
-
-# Cython debug symbols
 cython_debug/
+.idea/
+.vscode/
+.cursorignore
+.cursorindexingignore
 
 # Streamlit
-.streamlit/
+.streamlit/*
+!.streamlit/config.toml
 
 # MacOS
 .DS_Store
 
-# IDEs
-.idea/
-.vscode/
-
-# Local Data (User specific)
+# ==================================
+# ⚛️ QEPLOTTER SPECIFIC EXCLUSIONS
+# ==================================
+# Prevent committing large data files
 example_data/
 *.gnu
 *.dat
 *.out
+*.kpath
+*.dos
+
+# Generated directories
 pdos/
 pdos_files/
 saved/
+pdos_data/
+fatband_data/
+
+# User provided tail (cleaned)
+# marimo stuff if needed
+marimo/_static/
+marimo/_lsp/
+__marimo__/
